<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_5">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_black"
        android:gravity="center"
        android:padding="@dimen/padding_8"
        android:text="@string/app_name"
        android:textSize="@dimen/font_size_18" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/txt_version"
        android:textSize="@dimen/font_size_14" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/icon_profil"
        android:layout_height="@dimen/icon_profil"
        android:layout_below="@id/tv_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_8"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/txt_copyright"
        android:textSize="@dimen/font_size_14" />


</RelativeLayout>