<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_8"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_img_nunukan"
        android:layout_width="@dimen/icon_profil"
        android:layout_height="@dimen/icon_profil"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_nunukan" />

    <TextView
        android:id="@+id/txtsejarah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_img_nunukan"
        android:fontFamily="@font/nunito_black"
        android:text="@string/txt_sejarah"
        android:textSize="@dimen/font_size_14" />

    <TextView
        android:id="@+id/tv_deskripsi_sejarah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtsejarah"
        android:fontFamily="@font/nunito_bolditalic"
        android:text="@string/txt_title"
        android:textSize="@dimen/font_size_12" />

    <TextView
        android:id="@+id/txtgeografi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_deskripsi_sejarah"
        android:layout_marginTop="@dimen/margin_top_5"
        android:fontFamily="@font/nunito_black"
        android:text="@string/txt_geografi"
        android:textSize="@dimen/font_size_14" />

    <TextView
        android:id="@+id/tv_deskripsi_geografi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtgeografi"
        android:fontFamily="@font/nunito_bolditalic"
        android:text="@string/txt_title"
        android:textSize="@dimen/font_size_12" />


    <TextView
        android:id="@+id/txt_suku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_deskripsi_geografi"
        android:layout_marginTop="@dimen/margin_top_5"
        android:fontFamily="@font/nunito_black"
        android:text="@string/txt_suku"
        android:textSize="@dimen/font_size_14" />

    <TextView
        android:id="@+id/tv_suku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_suku"
        android:fontFamily="@font/nunito_bolditalic"
        android:text="@string/txt_title"
        android:textSize="@dimen/font_size_12" />

    <TextView

        android:id="@+id/txt_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_suku"
        android:layout_marginTop="@dimen/margin_top_5"
        android:fontFamily="@font/nunito_black"
        android:text="@string/txt_hasil_budidaya"
        android:textSize="@dimen/font_size_14" />

    <TextView

        android:id="@+id/tv_hasil_budidaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_hasil"
        android:fontFamily="@font/nunito_bolditalic"
        android:text="@string/txt_title"
        android:textSize="@dimen/font_size_12" />


</RelativeLayout>