<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomNormal">

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomNormal"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginEnd="@dimen/card_margin"
        app:cardCornerRadius="2dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <LinearLayout style="@style/CustomNormal.Vertical">

            <RelativeLayout style="@style/CustomNormal">

                <RelativeLayout
                    android:id="@+id/rl_icon"
                    style="@style/CustomWrap"
                    android:layout_margin="4dp">

                    <ImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/bg_circle" />

                    <TextView
                        android:id="@+id/tv_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="P"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_nama_kontak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/rl_icon"
                    android:fontFamily="@font/nunito_black"
                    android:text="@string/txt_title"
                    android:textColor="@color/colorBlackVer"
                    android:textSize="@dimen/font_size_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="48dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorGreyNo" />

            <RelativeLayout style="@style/CustomNormal">

                <RelativeLayout
                    android:id="@+id/rl_button"
                    style="@style/CustomWrap"
                    android:layout_alignParentEnd="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_copy"
                        style="@style/MaterialButtonRounded"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="12dp"
                        android:contentDescription="@string/todo"
                        android:padding="4dp"
                        android:theme="@style/MyButtonStyle"
                        app:icon="@drawable/ic_copy" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_call"
                        style="@style/MaterialButtonRadius"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="@dimen/card_margin"
                        android:layout_toEndOf="@id/btn_copy"
                        android:theme="@style/MyButtonStyle"
                        app:icon="@drawable/ic_phone_call" />

                </RelativeLayout>

                <LinearLayout
                    style="@style/CustomNormal.Vertical"
                    android:paddingStart="@dimen/txt_padding_left"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2.5dp"
                        android:fontFamily="@font/nunito_black"
                        android:text="@string/txt_telp"
                        android:textSize="@dimen/font_size_14" />

                    <TextView
                        android:id="@+id/tv_telepon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_telp"
                        android:textSize="@dimen/font_size_12" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_black"
                        android:text="@string/txt_alamat"
                        android:textSize="@dimen/font_size_14" />

                    <TextView
                        android:id="@+id/tv_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/card_margin"
                        android:paddingBottom="12dp"
                        android:text="@string/txt_alamat"
                        android:textSize="@dimen/font_size_12" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>